--- a/src/index.css
+++ b/src/index.css
@@ -1,5 +1,6 @@
 body {
   background: #000000;
+  background-image: url("./img/IMG_0244.PNG");
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
     'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
