--- a/src/index.css
+++ b/src/index.css
@@ -1,6 +1,9 @@
 body {
   background: #000000;
   background-image: url("./img/IMG_0244.PNG");
+  background-position: center; /* Center the image */
+  /* background-repeat: no-repeat;  */
+  background-size: cover;
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
     'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
